levels: fix title word wrap on mobile

--- a/frontend/src/components/pages/LevelPage.css
+++ b/frontend/src/components/pages/LevelPage.css
@@ -36,9 +36,4 @@
   margin: 0;
   font-size: 2.5rem;
   line-height: 2.5rem;
-  display: flex;
-  flex-wrap: wrap;
-}
-.LevelPage--headerPart {
-  white-space: pre;
 }
